<resources>
    <string name="app_name">Quiz IAK</string>
    <string name="submit">Submit</string>
    <string name="masukkan_nama_anda">Masukkan nama Anda</string>
    <string name="image_view_icon_user_activity_home">image view icon user activity home</string>
    <string name="image_view_header_background_user_profile_activity_dashboard_question">image view header background user profile activity dashboard question</string>
    <string name="image_view_header_background_alpha_user_profile_activity_dashboard_question_activity">image view header background alpha user profile activity dashboard question activity</string>
    <string name="username">Username</string>
    <string name="image_view_user_name_profile_activity_dashboard_question">image view user name profile activity dashboard question</string>
    <string name="score">Score</string>
    <string name="image_view_user_photo_profile_activity_dashboard_question">image view user photo profile activity dashboard question</string>
    <string name="score_0">Score: 0</string>
    <string name="_0">0</string>
    <string name="image_view_wrong_answer_item_dashboard_question">image view wrong answer item dashboard question</string>
    <string name="image_view_right_answer_item_dashboard_question">image view right answer item dashboard question</string>
    <string name="question_title">Question Title</string>
    <string name="next">Next</string>
    <string name="image_view_background_user_profile">image view background user profile</string>
    <string name="image_view_user_photo_profile">image view user photo profile</string>
</resources>
