<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context="com.iak.quiziak.ui.main.HomeActivity">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/image_view_icon_user_activity_home"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_account_circle_black_24dp"
        android:contentDescription="@string/image_view_icon_user_activity_home"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_nama_pengguna_activity_home"
        android:hint="@string/masukkan_nama_anda"
        android:gravity="center"
        android:layout_below="@+id/image_view_icon_user_activity_home"
        />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_submit_nama_pengguna_activity_home"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        />

</RelativeLayout>
