<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative_layout_container_item_dashboard_question"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_number_question_item_dashboard_question"
        android:text="@string/_0"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_view_wrong_answer_item_dashboard_question"
        android:src="@drawable/ic_add_red_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:rotation="45"
        android:contentDescription="@string/image_view_wrong_answer_item_dashboard_question"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_view_right_answer_item_dashboard_question"
        android:src="@drawable/ic_check_green_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image_view_right_answer_item_dashboard_question"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_question_title_item_dashboard_question"
        android:text="@string/question_title"
        android:textColor="@android:color/darker_gray"
        android:layout_toRightOf="@+id/text_view_number_question_item_dashboard_question"
        android:layout_toEndOf="@+id/text_view_number_question_item_dashboard_question"
        android:layout_toLeftOf="@+id/image_view_right_answer_item_dashboard_question"
        android:layout_toStartOf="@+id/image_view_right_answer_item_dashboard_question"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:ellipsize="end" />

</RelativeLayout>
